# mDMET

./: .gitignore  .panfs.e5bd6580.1505343368756395000  .panfs.e5bd6580.1505343368771976000  .panfs.e5bd6580.1505343368779764000  .panfs.e5bd6580.1505343368786580000  .panfs.e5bd6580.1505343368799322000  README.md  setup.py
examples/: C5.py  H10-FCI.py  H10.py  (+1 more)
lib/: .panfs.e4bd6580.1505015796449451000  .panfs.e4bd6580.1505016472885323000  .panfs.e5bd6580.1504636471348409000  .panfs.e5bd6580.1504637560972512000  .panfs.e5bd6580.1504637956270140000  .panfs.e5bd6580.1504638530495514000  .panfs.e5bd6580.1504638744731205000  .panfs.e5bd6580.1504639030923801000  .panfs.e5bd6580.1504639620791369000  .panfs.e5bd6580.1504641172477814000  .panfs.e5bd6580.1505149714521186000  .panfs.e5bd6580.1505149969783792000  .panfs.e5bd6580.1505150470455334000  .panfs.e5bd6580.1505151542351688000  .panfs.e5bd6580.1505152388306164000  .panfs.e5bd6580.1505152581895136000  .panfs.e5bd6580.1505152683292144000  .panfs.e5bd6580.1505152981645366000  .panfs.e5bd6580.1505153018335374000  .panfs.e5bd6580.1505153161891227000  .panfs.e5bd6580.1505153355364907000  .panfs.e5bd6580.1505153433799269000  .panfs.e5bd6580.1505154712761763000  .panfs.e6bd6580.1504654886910916000  .panfs.e6bd6580.1504655494872653000  .panfs.e6bd6580.1504655665426579000  .panfs.e6bd6580.1504656323312660000  .panfs.e6bd6580.1504656697983545000  .panfs.e6bd6580.1504657270796643000  .panfs.e6bd6580.1504657580274003000  .panfs.e6bd6580.1504991669507404000  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libdmet.cpp
(+33 files in other folders)
